Updated website for Dengue Info
We adjusted the system to be centered around the Dengue cases in Iquitos
and San Juan. Addtitionally we created markers to denote the cities
locations and provide additional information about the areas of
interest.

--- a/MapData/templates/background.html
+++ b/MapData/templates/background.html
@@ -37,27 +37,27 @@
                         <h4>Our purpose<h4>
                         <br>
                         <p class="font-weight-normal" >
-                            <img src="{{url_for('static', filename='images/zika_in_americas.jpg')}}" align="top" style="float: left; width: 40%; height: 50%;"/>
-                            <small>Argentina has their fair share of problems but,
+                            <img src="{{url_for('static', filename='images/dengue_cases.png')}}" align="top" style="float: left; width: 40%; height: 50%;"/>
+                            <small>Many cities have their fair share of problems but,
                             none are more annoying to the country’s citizens and visitors as mosquitos. 
                             Mosquitos while a pest are far more terrifying than most people realize. Not 
                             only do these insects suck blood from victims but, they carry with them a wide 
-                            range of diseases. One of these diseases, Zika, became rampant in February 
-                            through April of 2016 to 2017 in South America. As a result, the team decided 
-                            to create an early warning system to help prevent a resurgence of such a 
-                            widespread disease and to help its citizens.
+                            range of diseases. One of these diseases, Dengue, became rampant in 
+                            2007 and 2008 in Iquitos, Peru and San Juan, Puerto Rico. As a result, the team decided 
+                            to create an Information System to help visualize and analyze the factors in these two
+                            cities. 
                             </small>
                         </p>
                     </div> 
-                    <div id="zika_factors">
+                    <div id="dengue_factors">
                         <br>
-                        <h4>Factors impacting the spread of Zika<h4>
+                        <h4>Factors impacting the spread of Dengue<h4>
                         <br>
                         <p class="font-weight-normal">
                             <small>There are many factors that play a role in determining how many individuals
-                            become infected with Zika. The primary factor though is the mosquito population
+                            become infected with Dengue. The primary factor though is the mosquito population
                             and the factors that promote the an increase in the population of the mosquitos
-                            in Argentina. The factors include the following:
+                            in Dengue. The factors include the following:
                                 <ol>
                                     <li>Standing bodies of water</li>
                                     <li>The temperature</li>
@@ -73,14 +73,14 @@
                         <br>
                         <p class="font-weight-normal">
                             <small>
-                                For those interested in reading more about the Zika virus 
+                                For those interested in reading more about the Dengue virus 
                                 and mosquitos please click on any of the images below.
                             </small>
                         </p>
-                        <a href="https://www.cdc.gov/zika/index.html">
+                        <a href="https://www.cdc.gov/dengue/index.html">
                             <img src="{{url_for('static', filename='images/cdc_logo.jpg')}}" style="float: left; width: 20%; height: 20%;"/>
                         </a>
-                        <a href="https://www.iamat.org/country/argentina/risk/zika-virus">
+                        <a href="https://www.iamat.org/risks/dengue">
                             <img src="{{url_for('static', filename='images/iamat_logo.jpg')}}" style="float: right; width: 50%; height: 50%;"/>
                         </a>
                     </div>           
