Added new webpage for data plots and title for map

--- a/MapData/templates/the_team.html
+++ b/MapData/templates/the_team.html
@@ -25,6 +25,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/background">Background<span class="sr-only">(current)</span> </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/plots">Data Plots</a>
+                                </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="/team">The Team<span class="sr-only">(current)</span></a>
                                 </li>
