--- a/MapData/templates/background.html
+++ b/MapData/templates/background.html
@@ -26,6 +26,9 @@
                                     <a class="nav-link" href="/background">Background<span class="sr-only">(current)</span> </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="/plots">Data Plots</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="/team">The Team</a>
                                 </li>
                             </ul>
