--- a/MapData/templates/index.html
+++ b/MapData/templates/index.html
@@ -26,6 +26,9 @@
                                     <a class="nav-link" href="/background">Background</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="/plots">Data Plots</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="/team">The Team</a>
                                 </li>
                             </ul>
@@ -93,6 +96,8 @@
                             </div>
                         </div>
                     </form>
+                    <br>
+                    <h4 style="text-align: center;">{{data.month_selected}}, {{data.year_selected}}</h4>
                     <br>
                     {% include "map.html" %}
                     <br>
