Added Nicholas to the team page
Since Nicholas joined the team late we needed to add him to the team
webpage.

--- a/MapData/templates/the_team.html
+++ b/MapData/templates/the_team.html
@@ -76,7 +76,24 @@
                             Information Security and interesting projects to be a part of.
                             </small>
                         </p>
-                    </div>           
+                    </div>       
+                    <div id="nicholas_profile">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <h4>Nicholas Luczak<h4>
+                        <br>
+                        <p class="font-weight-normal">
+                            <img src="{{url_for('static', filename='images/nicholas_luczak_profile_pic.jpg')}}" align="top" style="float: left; width: 20%; height: 20%;"/>
+                            <small>Nicholas Luczak works as a research technician at Albany Medical Center 
+                            developing Brain-computer interfacing software for the National Center for Adaptive 
+                            Neurotechnologies. He is a second semester senior at RPI and is looking to apply for 
+                            graduate school in the fall.
+                            </small>
+                        </p>
+                    </div>    
                 </div>
                 <div class="col-1">
                 </div>
