--- a/MapData/templates/the_team.html
+++ b/MapData/templates/the_team.html
@@ -8,7 +8,7 @@
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body background="{{url_for('static', filename='images/analytics_background.png')}}">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-1">
                 </div>
