Adjusted the webpages to fix issues for the paper

--- a/MapData/templates/contacts.html
+++ b/MapData/templates/contacts.html
@@ -26,10 +26,10 @@
                                     <a class="nav-link" href="/background">Background<span class="sr-only">(current)</span> </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/plots">Data Plots</a>
+                                    <a class="nav-link" href="/plots">Data Analysis and Visualization</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/team">The Team<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="/contacts">Contacts<span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -47,6 +47,8 @@
                                 <div class="col-9">
                                     <p class="font-weight-normal" >
                                         <small>Karan, our team lead and PhD student at RPI, has continued lead this project as he continues moving forward in his studies. Karan's interests include machine learning, technical writing and data science
+                                        <br>
+                                        Email: <a href="mailto:bhanotkaran22@gmail.com">Karan Bhanot</a>
                                         </small>
                                     </p>
                                 </div>
@@ -63,6 +65,8 @@
                                     <p class="font-weight-normal" >
                                         <small>Dominic is a 1st year graduate student at RPI and full-time employee at IBM.
                                         Dominic became interested in the project after speaking to Karan about his past projects and career goals.
+                                        <br>
+                                        Email: <a href="mailto:Dominic.Schroeder@ibm.com">Dominic Schroeder</a>
                                         </small>
                                     </p>
                                 </div>
@@ -80,6 +84,8 @@
                                 <div class="col-9">
                                     <p class="font-weight-normal" >
                                         <small>Isaac is a 3rd year Undergraduate student at RPI whose primary interests include Information Security and interesting projects to be a part of.
+                                        <br>
+                                        Email: <a href="mailto:llewei@rpi.edu">Isaac Llewellyn</a>
                                         </small>
                                     </p>
                                 </div>
@@ -95,6 +101,8 @@
                                 <div class="col-9">
                                     <p class="font-weight-normal" >
                                         <small>Nicholas Luczak works as a research technician at Albany Medical Center developing Brain-computer interfacing software for the National Center for Adaptive Neurotechnologies. He is a second semester senior at RPI and is looking to apply for graduate school in the fall.
+                                        <br>
+                                        Email: <a href="mailto:Nicholas Luczak">Nicholas Luczak</a>
                                         </small>
                                     </p>
                                 </div>
