--- a/MapData/templates/data_plots.html
+++ b/MapData/templates/data_plots.html
@@ -26,10 +26,10 @@
                                     <a class="nav-link" href="/background">Background<span class="sr-only">(current)</span> </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/plots">Data Plots</a>
+                                    <a class="nav-link" href="/plots">Data Analysis and Visualization</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/team">The Team</a>
+                                    <a class="nav-link" href="/contacts">Contacts</a>
                                 </li>
                             </ul>
                         </div>
