--- a/MapData/templates/index.html
+++ b/MapData/templates/index.html
@@ -1,119 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-       <meta charset="utf-8">
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
-    <body background="{{url_for('static', filename='images/analytics_background.png')}}">
+    <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/" style="font-weight: bold;">DSIS</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-brand">Dengue Spread Information System</div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/background">Background</a>
-                    </li>
+                    </li>  
                     <li class="nav-item">
-                        <a class="nav-link" href="/plots">Data Analysis and Visualization</a>
-                    </li>
+                        <a class="nav-link" href="/plots">Risk Plot Analysis</a>
+                    </li>    
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacts">Contacts</a>
-                    </li>
+                        <a class="nav-link" href="/contacts">About</a>
+                    </li>        
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="col-12" style="background-color:white; min-height:100vh;">
-                    <div class="row">
-                        <div class="col-md-1">
-                        </div>
-                        <div class="col-md-10 text-center pt-4 pb-2">
-                            <h2>Dengue Spread Information System (DSIS)</h2>
-                            <p class="text-left">
-                                Dengue Spread Information System is a web application developed to highlight the spread of Dengue across Iquitos, Peru and San Juan, Puerto Rico from 1990 to 2013. The application includes an interactive map and several static risk factor plots that might explain the spread of Dengue across a region.<br><br>
-                                The map below depicts the an interactive visualization for the Dengue cases for Iquitos and San Juan. Please select the year and month of the information for the two cities you'd like to see. You can zoom in on the markers to view the Choropleth layer of Dengue cases.
-                            </p>
-                        </div>
-                        <div class="col-md-1">
-                        </div>
-                    </div>
+                <div class="col-md-12 pt-4 pb-2">
+                    <h3>Spread of Dengue across years</h3>
+                    <p class="text-justify">
+                        The map below depicts the an interactive visualization for the Dengue cases in Iquitos and San Juan. Select the month and year for which you want the information to be shown. You can zoom in on the markers to view the Choropleth layer of Dengue cases as well as click on them to reveal further information.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
                     <form id="updateMap" method="post" action="/">
-                        <div class="row main-form" style="margin-left:10%; margin-right:10%;">
+                        <div class="row">
                             <div class="col-md-4">
-                                <div class="form-group">
-                                    <select name="month" class="form-control" id="month">
-                                      <option>January</option>
-                                      <option>February</option>
-                                      <option>March</option>
-                                      <option>April</option>
-                                      <option>May</option>
-                                      <option>June</option>
-                                      <option>July</option>
-                                      <option>August</option>
-                                      <option>September</option>
-                                      <option>October</option>
-                                      <option>November</option>
-                                      <option>December</option>
-                                    </select>
-                                </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="form-group">
-                                    <select name="year" class="form-control" id="year">
-                                        <option>1990</option>
-                                        <option>1991</option>
-                                        <option>1992</option>
-                                        <option>1993</option>
-                                        <option>1994</option>
-                                        <option>1995</option>
-                                        <option>1996</option>
-                                        <option>1997</option>
-                                        <option>1998</option>
-                                        <option>1999</option>
-                                        <option>2000</option>
-                                        <option>2001</option>
-                                        <option>2002</option>
-                                        <option>2003</option>
-                                        <option>2004</option>
-                                        <option>2005</option>
-                                        <option>2006</option>
-                                        <option>2007</option>
-                                        <option>2008</option>
-                                        <option>2009</option>
-                                        <option>2010</option>
-                                        <option>2011</option>
-                                        <option>2012</option>
-                                        <option>2013</option>
-                                    </select>
-                                </div>
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-primary btn-block">Submit</button>    
                             </div>
                         </div>
                     </form>
-                    <h4 style="text-align: center;">{{data.month_selected}}, {{data.year_selected}}</h4>
-                    <br>
-                    <div class="map-page" style="width: 80%; height: 50%; margin-left: 10%;">
-                        {% include "map.html" %}
-                    </div>
-                    <br>
                 </div>
-                <style>.leaflet-popup-content-wrapper {
-                            width: 300px;
-                            height: 130px;
-                        }
-                </style>
             </div>
         </div>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     </body>
 </html>
